--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.0"
